# pixel

./: .dockerignore  .doxygen  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.docs  Dockerfile2  README  README.md  animation_8cpp.html  animation_8h.html  animation_8h_source.html  animation__group_8cpp.html  animation__group_8h.html  animation__group_8h_source.html  annotated.html  app_8cpp.html  app_8h.html  app_8h_source.html  attribute_8cpp.html  audio_8cpp.html  audio_8h.html  audio_8h_source.html  audio__demo_8cpp.html  binding_8cpp.html  binding_8h.html  binding_8h_source.html  buffer_8cpp.html  buffer_8h.html  buffer_8h_source.html  build  camera_8h_source.html  class_ground_state.html  class_jump_state.html  class_level-members.html  class_level.html  class_particle_controller-members.html  class_particle_controller.html  (+553 more)
clfu/: a.out
pixel/: CMakeLists.txt  imgui.ini  pixel.h
pixel/app/: app.cpp  app.h
pixel/assets/: 1.tmx  Untitled - 1.pyxel  Untitled.pyxel  brick.pyxel  cat.pyxel  cats.pyxel  column.pyxel  cups.piko  flames.xcf  gallery.pyxel  guy.xcf  joanna.pyxel  lines.tsx  map.tmx  map2.tmx  mario.tsx  moon.pyxel  peck_face_study.pyxel  rocket.xcf  rocket1.xcf  samurai pickle.pyxel  shades.tsx  ship.tsx  spy.pyxel  swordsmen.pyxel  traps.pyxel  traps.tsx  traps_1.tmx  traps_2.tmx  unit.pyxel
pixel/assets/animations/: cat.lua  sonic.lua  spy.lua
pixel/assets/sample_sprites/: Untitled.xcf
pixel/assets/scripts/: anim.lua  platformer.lua  tilemap.lua
pixel/assets/shaders/: basic.frag  basic.vert  circle.frag  circle.vert  line_renderer.frag  line_renderer.vert  n_body.frag  n_body.vert  shader.frag  sprite.frag  sprite.vert  tilemap.frag  tilemap.vert
pixel/clfu/: gl_debug_map.cpp  glcore  lines  test.cpp  transform.rb
pixel/cmake/: GLEW.cmake  GoogleTest.cmake  LibPNG.cmake
pixel/demos/: CMakeLists.txt  audio.cpp  audio_demo.cpp  gpu_particles.cpp  gui.cpp  lines.cpp  lua.cpp  lua.lua  main.cpp  map.cpp  map_viewer.cpp  particles.cpp  particles2.cpp  platformer.cpp  rider.cpp  rocket.cpp  sprite.cpp  template.cpp  tetrominos.cpp  textured_triangle_renderer.cpp
pixel/demos/golf/: CMakeLists.txt  golf.cpp
pixel/demos/golf/src/: golf.cpp  golf.h
pixel/demos/hook/: CMakeLists.txt  hook.cpp
pixel/graphics/: buffer.cpp  buffer.h  image.cpp  image.h  shader.cpp  shader.h  texture.cpp  vao.h
pixel/lib/tinypng/: CMakeLists.txt
pixel/pixel/: error.h  level.h  math.h  pixel.h  random.h  types.h
pixel/pixel/animation/: animation.cpp  animation.h  animation_group.cpp  animation_group.h  lambda_animation.cpp  lambda_animation.h
pixel/pixel/app/: app.cpp  app.h
pixel/pixel/audio/: audio.cpp  audio.h
pixel/pixel/collision/: collision.cpp  collision.h
pixel/pixel/entrypoints/: CMakeLists.txt  script_runner.cpp
pixel/pixel/graphics/: attribute.cpp  attribute.h  buffer.cpp  buffer.h  camera.cpp  camera.h  common.h  graphics.cpp  graphics.h  image.cpp  image.h  offscreen_render_target.cpp  offscreen_render_target.h  pack.cpp  pack.h  render_buffer.cpp  render_buffer.h  render_context.cpp  render_context.h  shader.cpp  shader.h  shader_utils.cpp  shader_utils.h  sprite.cpp  sprite.h  sprite_animation.cpp  sprite_animation.h  sprite_batch.cpp  sprite_batch.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  texture_atlas.cpp  texture_atlas.h  texture_region.h  vao.cpp  vao.h
pixel/pixel/imgui/: gui.cpp  gui.h  imgui_impl_opengl3.cpp
pixel/pixel/input/: input.cpp  input.h  input_button_base.cpp  input_button_base.h  input_device.cpp  input_device.h  input_keyboard.cpp  input_keyboard.h  keyboard.cpp
pixel/pixel/lua/: animation.lua  binding.cpp  binding.h  collision.lua  lua.h  lua_binding.cpp  lua_binding.h  lua_binding_glm.cpp  pack.lua  pack_test.lua  pixel.lua  repl.lua  tilemap.lua  wrap_camera.cpp  wrap_collision.cpp  wrap_glm.cpp  wrap_image_data.cpp  wrap_opengl.cpp  wrap_tileset.cpp
pixel/pixel/math/: math.h
pixel/pixel/objects/: game_object.cpp  game_object.h  node.h
pixel/pixel/physics/: constraints.h  particle.h  physics.h
pixel/pixel/platform/: platform.h  window.cpp  window.h
pixel/pixel/renderers/: line_renderer.cpp  line_renderer.h  renderer_group.h  renderers.h  sprite_renderer.cpp  sprite_renderer.h  textured_triangle_renderer.cpp  textured_triangle_renderer.h  tile_map_renderer.cpp  tile_map_renderer.h
pixel/pixel/resources/: resource_pool.cpp  resource_pool.h
pixel/pixel/system/: system.cpp  system.h  version.cpp  version.cpp.in  version.h
pixel/pixel/tilemap/: tile_atlas.cpp  tile_atlas.h  tile_layer.cpp  tile_layer.h  tile_layer_texture.cpp  tile_layer_texture.h  tile_map.cpp  tile_map.h  tile_map_collider.h  tile_map_renderer.cpp  tile_map_renderer.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
pixel/pixel/time/: frame_counter.cpp  frame_counter.h  frame_rate_limiter.cpp  frame_rate_limiter.h  simple_timer.cpp  simple_timer.h
pixel/pixel/tools/: CMakeLists.txt
pixel/pixel/util/: collections.h  symbol_map.cpp  symbol_map.h  util.cpp  util.h
pixel/test/: CMakeLists.txt  main.cpp  setup.cpp  setup.h  test_setup.cpp  test_sprite.cpp  test_tile_layer.cpp  test_tilemap.cpp  test_tileset.cpp
pixel/test/animation/: test_animation.cpp
pixel/test/collision/: test_collision.cpp  test_tile_map_collider.cpp
pixel/test/graphics/: test_camera.cpp  test_offscreen_render_target.cpp  test_pack.cpp  test_renderers.cpp  test_sprite.cpp  test_sprite_animation.cpp  test_texture_atlas.cpp
pixel/test/input/: test_callback_stack.cpp  test_keyboard.cpp
pixel/test/lua/: test_binding.cpp  test_sol.cpp
pixel/test/objects/: test_game_object.cpp
pixel/test/physics/: test_spring.cpp
pixel/test/tilemap/: test_tile_atlas.cpp  test_tile_layer.cpp  test_tile_layer_tile_animation.cpp  test_tile_map.cpp  test_tile_map_renderer.cpp  test_tileset.cpp
pixel/test/time/: test_simple_timer.cpp
pixel/time/: frame_counter.cpp  frame_rate_limiter.cpp
pixel/tools/: CMakeLists.txt  shadercheck.cpp  shadercheck.h
pixel/util/: symbol_map.cpp  symbol_map.h  util.cpp  util.h
(+592 files in other folders)
